prepend columns to dataframes (data showing up is still a work in progress)

--- a/bin/Flatten_JSON_to_tabular.ipynb
+++ b/bin/Flatten_JSON_to_tabular.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informational-robinson",
+   "id": "finnish-window",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "known-george",
+   "id": "educated-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-opportunity",
+   "id": "contained-government",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "packed-august",
+   "id": "unique-chocolate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,16 @@
     "    Returns a dictionary consisting of versions of the dataframes in a\n",
     "    PhoneView map with uniquely-identifiable (i.e. fully queryable) rows.\n",
     "    \"\"\"\n",
-    "    df_map = {}\n",
+    "    df_map = dict()\n",
     "    pkey = set()\n",
     "    \n",
-    "    def prepend_pkey(node, curr_pkey):\n",
-    "        \"\"\"\n",
-    "        \"\"\"\n",
+    "    def get_pkey(node, curr_pkey):\n",
     "        for key, val in node.items():\n",
     "            if isinstance(val, list):\n",
     "                for e in val:\n",
-    "                    prepend_pkey(e, curr_pkey)\n",
+    "                    get_pkey(e, curr_pkey)\n",
     "            elif isinstance(val, dict):\n",
-    "                prepend_pkey(val, curr_pkey)\n",
+    "                get_pkey(val, curr_pkey)\n",
     "            elif isinstance(val, pd.DataFrame):\n",
     "                for col in val.columns.values:\n",
     "                    if col in curr_pkey:\n",
@@ -69,12 +67,32 @@
     "                    df_map[key] = val\n",
     "            else:\n",
     "                curr_pkey.add(key)\n",
-    "                for label in df_map:\n",
-    "                    if key not in df_map[label].columns.values:\n",
-    "                        df_map[label].assign(key=val)\n",
-    "                        print(f\"assigned {key=} to {label}\")\n",
     "    \n",
-    "    prepend_pkey(pv_map, pkey)\n",
+    "    get_pkey(pv_map, pkey)\n",
+    "    print(f\"determined {pkey=}\", end=\"\\n\\n\")\n",
+    "    \n",
+    "    def prepend_pkey(node):\n",
+    "        for key, val in node.items():\n",
+    "            if isinstance(val, list):\n",
+    "                for e in val:\n",
+    "                    prepend_pkey(e)\n",
+    "            elif isinstance(val, dict):\n",
+    "                prepend_pkey(val)\n",
+    "            elif key in pkey:\n",
+    "                for df_label, df in df_map.items():\n",
+    "                    if key not in df.columns.values:\n",
+    "                        df_map[df_label] = (\n",
+    "                            df.assign(\n",
+    "                                **{key: val},\n",
+    "                                ignore_index=True\n",
+    "                            )[[key] + [c for c in df.columns.values if c != key]]\n",
+    "                        )\n",
+    "                        print(f\"updated columns of {df_label=}: {df_map[df_label].columns.values}\", end=\"\\n\\n\")\n",
+    "                    \n",
+    "    prepend_pkey(pv_map)\n",
+    "    \n",
+    "    for df in df_map.values():\n",
+    "        assert all(p in df.columns.values for p in pkey)\n",
     "    \n",
     "    return df_map\n",
     "\n",
@@ -84,14 +102,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geological-easter",
+   "id": "derived-dimension",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import display\n",
+    "\n",
     "for label, df in df_map.items():\n",
-    "    import IPython.display as display\n",
     "    print(label)\n",
-    "    display(df.columns.values)"
+    "    display(df)"
    ]
   }
  ],
