add trip range and trip section information by index to dataframes; move code to emeval.input.tabularize

--- a/bin/Flatten_JSON_to_tabular.ipynb
+++ b/bin/Flatten_JSON_to_tabular.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nasty-greeting",
+   "id": "measured-penguin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-niger",
+   "id": "immune-movement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-offer",
+   "id": "federal-stewart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-tribe",
+   "id": "loaded-disposition",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "def column_with_value(name, value, indices):\n",
+    "    return pd.DataFrame({name: np.full(indices.size, value)}, index=indices)\n",
     "\n",
     "df_map = dict()\n",
     "\n",
@@ -53,26 +57,55 @@
     "        for r in (phone_map[\"calibration_ranges\"] + phone_map[\"evaluation_ranges\"]):\n",
     "            for df_label, df in {k: v for k, v in r.items() if isinstance(v, pd.DataFrame)}.items():\n",
     "                curr_pk = pk.copy()\n",
-    "                \n",
+    "\n",
     "                if r in phone_map[\"calibration_ranges\"]:\n",
     "                    curr_pk.update({\"range_type\": \"calibration\"})\n",
     "                elif r in phone_map[\"evaluation_ranges\"]:\n",
     "                    curr_pk.update({\"range_type\": \"evaluation\"})\n",
-    "                \n",
+    "\n",
     "                curr_pk.update({k: v for k, v in r.items()\n",
     "                                if not (\n",
     "                                    isinstance(v, pd.DataFrame)\\\n",
     "                                    or isinstance(v, list)\\\n",
     "                                    or isinstance(v, dict))})\n",
-    "                \n",
+    "\n",
     "                updated_df = df.assign(**curr_pk)\n",
-    "                \n",
+    "\n",
+    "                if r in phone_map[\"evaluation_ranges\"]:\n",
+    "                    for etr in r[\"evaluation_trip_ranges\"]:\n",
+    "                        if df_label in etr:\n",
+    "                            if \"trip_range_id\" not in updated_df.columns:\n",
+    "                                updated_df = pd.concat(\n",
+    "                                    [updated_df,\n",
+    "                                     column_with_value(\"trip_range_id\", etr[\"trip_id\"], etr[df_label].index),\n",
+    "                                     column_with_value(\"trip_range_id_base\", etr[\"trip_id_base\"], etr[df_label].index),\n",
+    "                                     column_with_value(\"trip_range_run\", etr[\"trip_run\"], etr[df_label].index)],\n",
+    "                                    axis=1)\n",
+    "                            else:\n",
+    "                                updated_df.at[etr[df_label].index, \"trip_range_id\"] = etr[\"trip_id\"]\n",
+    "                                updated_df.at[etr[df_label].index, \"trip_range_id_base\"] = etr[\"trip_id_base\"]\n",
+    "                                updated_df.at[etr[df_label].index, \"trip_range_run\"] = etr[\"trip_run\"]\n",
+    "\n",
+    "                        for esr in etr[\"evaluation_section_ranges\"]:\n",
+    "                            if df_label in esr:\n",
+    "                                if \"trip_section_id\" not in updated_df.columns:\n",
+    "                                    updated_df = pd.concat(\n",
+    "                                        [updated_df,\n",
+    "                                         column_with_value(\"trip_section_id\", esr[\"trip_id\"], esr[df_label].index),\n",
+    "                                         column_with_value(\"trip_section_id_base\", esr[\"trip_id_base\"], esr[df_label].index),\n",
+    "                                         column_with_value(\"trip_section_run\", esr[\"trip_run\"], esr[df_label].index)],\n",
+    "                                        axis=1)\n",
+    "                                else:\n",
+    "                                    updated_df.at[esr[df_label].index, \"trip_section_id\"] = esr[\"trip_id\"]\n",
+    "                                    updated_df.at[esr[df_label].index, \"trip_section_id_base\"] = esr[\"trip_id_base\"]\n",
+    "                                    updated_df.at[esr[df_label].index, \"trip_section_run\"] = esr[\"trip_run\"]\n",
+    "\n",
     "                for ts_col in [c for c in updated_df.columns.tolist() if \"ts\" in c]:\n",
     "                    updated_df[ts_col] = updated_df[ts_col].astype(float)\n",
     "\n",
     "                if phone_os not in df_map:\n",
     "                    df_map[phone_os] = dict()\n",
-    "                \n",
+    "\n",
     "                if df_label not in df_map[phone_os]:\n",
     "                    df_map[phone_os][df_label] = updated_df\n",
     "                else:\n",
@@ -82,10 +115,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vulnerable-arlington",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "primary-qatar",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import display\n",
@@ -94,6 +125,28 @@
     "    for df_label, df in df_detail_map.items():\n",
     "        print(phone_os, df_label)\n",
     "        display(df)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "infectious-handbook",
+   "metadata": {},
+   "source": [
+    "import json\n",
+    "\n",
+    "def serialize(node: dict):\n",
+    "    for key, val in node.items():\n",
+    "        if isinstance(val, list):\n",
+    "            for v in val:\n",
+    "                serialize(v)\n",
+    "        elif isinstance(val, dict):\n",
+    "            serialize(val)\n",
+    "        elif isinstance(val, pd.DataFrame):\n",
+    "            node[key] = val.columns.tolist()\n",
+    "    return node\n",
+    "\n",
+    "with open(f\"PVMAP~{SPEC_ID}.json\", \"w\") as f:\n",
+    "    json.dump(serialize(pv.map()), f)"
    ]
   }
  ],
