successfully show battery drain chart in new Data exploration template

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -352,7 +352,7 @@
    "outputs": [],
    "source": [
     "to_ucb_trip = third_repetition[\"evaluation_trip_ranges\"][0]; print(to_ucb_trip[\"trip_id\"])\n",
-    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
+    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg"
    ]
   },
   {
