--- a/Data_exploration_template_tabular.ipynb
+++ b/Data_exploration_template_tabular.ipynb
@@ -142,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `tabularize_pv_map` function in `emeval.input.tabularize` can be used to convert a phone view tree into a series of dataframes for more intuitive querying. The dataframes are organized by the operating systems of the test phones and the type of data they hold."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -156,8 +163,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display\n",
-    "\n",
     "for phone_os, df_map in pv_dfs.items():\n",
     "    for df_label, df in df_map.items():\n",
     "        print(f\"{phone_os=}, {df_label=}\")\n",
@@ -234,7 +239,7 @@
    "source": [
     "### For trips\n",
     "\n",
-    "Using the phone view as an example"
+    "Using the phone view dataframes:"
    ]
   },
   {
@@ -243,11 +248,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trip_range_subset = [\"trip_range_id_base\", \"trip_range_gt_start_ts\", \"trip_range_gt_end_ts\"]\n",
     "for phone_os, df_map in pv_dfs.items():\n",
     "    for df_label, df in df_map.items():\n",
     "        print(\"-\"*10, f\"{phone_os=}, {df_label=}\", \"-\"*10)\n",
     "        if \"trip_range_id\" in df.columns:\n",
-    "            trip_range_info = df[[\"trip_range_id_base\", \"trip_range_gt_start_ts\", \"trip_range_gt_end_ts\"]].dropna()\n",
+    "            trip_range_info = df.drop_duplicates(subset=trip_range_subset)[trip_range_subset].dropna()\n",
     "            for _, trip_range_id_base, gt_start_ts, gt_end_ts in trip_range_info.itertuples():\n",
     "                print(f\"{trip_range_id_base=}, {gt_start_ts=}, {gt_end_ts=}\")\n",
     "                gt_trip = sd.get_ground_truth_for_trip(trip_range_id_base, gt_start_ts, gt_end_ts)\n",
@@ -260,7 +266,7 @@
    "source": [
     "## For sections\n",
     "\n",
-    "Using the eval view as an example"
+    "Same as above:"
    ]
   },
   {
@@ -269,23 +275,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for phone_os, eval_map in ev.map(\"evaluation\").items():\n",
-    "    print(15 * \"=*\")\n",
-    "    print(phone_os, eval_map.keys())\n",
-    "    for (curr_calibrate, curr_calibrate_trip_map) in phone_map.items():\n",
-    "        print(4 * ' ', 15 * \"-*\")\n",
-    "        print(4 * ' ', curr_calibrate, curr_calibrate_trip_map.keys())\n",
-    "        for r in curr_calibrate_trip_map[\"evaluation_ranges\"]:\n",
-    "            print(8 * ' ', 30 * \"=\")\n",
-    "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
-    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
-    "                    print(16 * ' ', 30 * \"-\")\n",
-    "                    gt_leg = sd.get_ground_truth_for_leg(tr[\"trip_id_base\"], sr[\"trip_id_base\"])\n",
-    "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
+    "trip_section_subset = [\"trip_range_id_base\", \"trip_section_gt_start_ts\", \"trip_section_gt_end_ts\"]\n",
+    "for phone_os, df_map in pv_dfs.items():\n",
+    "    for df_label, df in df_map.items():\n",
+    "        print(\"-\"*10, f\"{phone_os=}, {df_label=}\", \"-\"*10)\n",
+    "        if \"trip_section_id\" in df.columns:\n",
+    "            trip_section_info = df.drop_duplicates(subset=trip_section_subset)[trip_section_subset].dropna()\n",
+    "            for _, trip_range_id_base, gt_start_ts, gt_end_ts in trip_section_info.itertuples():\n",
+    "                print(f\"{trip_range_id_base=}, {gt_start_ts=}, {gt_end_ts=}\")\n",
+    "                gt_trip = sd.get_ground_truth_for_trip(trip_range_id_base, gt_start_ts, gt_end_ts)\n",
+    "                print(eisd.SpecDetails.get_concat_trajectories(gt_trip)[\"properties\"], end=\"\\n\\n\")"
    ]
   },
   {
@@ -306,9 +305,11 @@
     "ifig, ax = plt.subplots(ncols=1, nrows=1, figsize=(10,5))\n",
     "for phone_os, df_map in pv_dfs.items():\n",
     "    battery_df = df_map[\"battery_df\"]\n",
-    "    for phone_label in battery_df[\"phone_label\"].unique():\n",
-    "        battery_df.query(f\"phone_label == '{phone_label}'\").plot(x=\"hr\", y=\"battery_level_pct\", ax=ax,\n",
-    "                                                                label=phone_label, ylim=(0, 100))"
+    "    for i, phone_label in enumerate(battery_df[\"phone_label\"].unique()):\n",
+    "        third_rep = battery_df.query(\n",
+    "            f\"phone_label == '{phone_label}' and range_type == 'evaluation' and range_index == 2\")\n",
+    "        role = third_rep[\"role\"].unique()[0]\n",
+    "        third_rep.plot(ax=ax, x=\"hr\", y=\"battery_level_pct\", label=f\"{phone_label} ({role})\", ylim=(0, 100))"
    ]
   },
   {
@@ -323,10 +324,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "third_repetition = pv.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_ranges\"][2]; third_repetition[\"trip_id\"]"
+    "df = pv_dfs[\"ios\"][\"battery_df\"]  # pick a df, all of them have the same trip information\n",
+    "bart_leg_df = df.query(\n",
+    "    \"phone_label == 'ucb-sdb-ios-1'\"\n",
+    "    \"and range_type == 'evaluation'\"\n",
+    "    \"and range_index == 2\"\n",
+    "    \"and trip_range_index == 0\"\n",
+    "    \"and trip_section_index == 5\"\n",
+    ")[\n",
+    "    [\"trip_range_id_base\",\n",
+    "     \"trip_section_id_base\",\n",
+    "     \"trip_section_gt_start_ts\",\n",
+    "     \"trip_section_gt_end_ts\"\n",
+    "    ]\n",
+    "].drop_duplicates()\n",
+    "\n",
+    "bart_leg_df"
    ]
   },
   {
@@ -335,17 +353,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_ucb_trip = third_repetition[\"evaluation_trip_ranges\"][0]; print(to_ucb_trip[\"trip_id\"])\n",
-    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
+    "bart_leg_tuple = list(bart_leg_df.iterrows())[0][1]\n",
+    "\n",
+    "trip_range_id_base = bart_leg_tuple[\"trip_range_id_base\"]\n",
+    "trip_section_id_base = bart_leg_tuple[\"trip_section_id_base\"]\n",
+    "gt_start_ts = bart_leg_tuple[\"trip_section_gt_start_ts\"]\n",
+    "gt_end_ts = bart_leg_tuple[\"trip_section_gt_end_ts\"]\n",
+    "\n",
+    "gt_leg = sd.get_ground_truth_for_leg(trip_range_id_base, trip_section_id_base, gt_start_ts, gt_end_ts)\n",
+    "\n",
+    "gt_leg"
    ]
   },
   {
@@ -363,6 +380,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ezgj.get_geojson_for_section requires a leg in phone view map form\n",
+    "# TODO: write an adapter function that converts a leg in dataframe form to a leg in map form\n",
+    "bart_leg = pv.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_ranges\"][2][\"evaluation_trip_ranges\"][0][\"evaluation_section_ranges\"][5]\n",
+    "\n",
     "curr_map = folium.Map()\n",
     "gt_leg_gj = sd.get_geojson_for_leg(gt_leg)\n",
     "sensed_section_gj = ezgj.get_geojson_for_section(bart_leg)\n",
