Notebook is now running with mongodb localy hosted e-mission erver
Also commented out bitrotted `validate()` call

--- a/Calibration_stationary_basic_stats.ipynb
+++ b/Calibration_stationary_basic_stats.ipynb
@@ -81,10 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_URL = \"http://localhost:8080\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd_hf = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_hf_calibration_stationary_only\")\n",
-    "sd_mf = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_med_freq_calibration_stationary_only\")"
+    "sd_hf = eisd.ServerSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_hf_calibration_stationary_only\")\n",
+    "sd_mf = eisd.ServerSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_med_freq_calibration_stationary_only\")"
    ]
   },
   {
@@ -130,13 +130,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`validate()` has bug from legacy code, so we comment it out for now"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pv_hf.validate()\n",
-    "pv_mf.validate()"
+    "# pv_mf.validate()"
    ]
   },
   {
@@ -593,34 +600,6 @@
     "\n",
     "ifig.tight_layout(pad=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -639,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
