--- a/Calibration_stationary_basic_viz.ipynb
+++ b/Calibration_stationary_basic_viz.ipynb
@@ -70,10 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_URL = \"http://localhost:8080\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd_hf = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_hf_calibration_stationary_only\")\n",
-    "sd_mf = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_med_freq_calibration_stationary_only\")"
+    "sd_hf = eisd.ServerSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_hf_calibration_stationary_only\")\n",
+    "sd_mf = eisd.ServerSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"sfba_med_freq_calibration_stationary_only\")"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "# pv_hf.validate()\n",
-    "pv_mf.validate()"
+    "# pv_mf.validate()"
    ]
   },
   {
@@ -441,20 +441,6 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -473,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
