--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -85,9 +85,9 @@
    },
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_URL = \"http://localhost:8080\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")"
+    "sdunp = eisd.ServerSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")"
    ]
   },
   {
@@ -103,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "pvunp = eipv.PhoneView(sdunp)"
@@ -115,10 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import arrow\n",
-    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"transitions\"]:\n",
-    "    if t[\"data\"][\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"data\"][\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
-    "        print(t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(sdunp.eval_tz))"
+    "pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"].keys()\n",
+    "# pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"]['calibration_transitions'].keys()"
    ]
   },
   {
@@ -127,7 +127,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvunp.validate()"
+    "import arrow\n",
+    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_transitions\"]: #is this the right change?\n",
+    "    if t[\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
+    "        print(t[\"spec_id\"], t[\"transition\"], t[\"trip_id\"], arrow.get(t[\"ts\"]).to(sdunp.eval_tz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib\n",
+    "importlib.reload(eipv.evpv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validate is way broken\n",
+    "# pvunp.validate()"
    ]
   },
   {
@@ -213,6 +236,15 @@
    "metadata": {},
    "source": [
     "## Display sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(ezev)"
    ]
   },
   {
